fixed cta component text align

--- a/scss/components/_cta.scss
+++ b/scss/components/_cta.scss
@@ -16,6 +16,7 @@ $cta-green: #4caf50;
     transition: cubic-bezier(0.215, 0.610, 0.355, 1) .3s;
     border: 2px solid $color__accent-main;
     margin: 0 5px; 
+    text-align: center;
     &:hover {
         transform: translateY(-5px);
     }
